2004-10-15  Geoff Norton  <gnorton@customerdna.com>

	* mini-ppc.c (calculate_sizes): Marshal valuetypes for pinvoke
	methods as their native size, fixed bug #57543, #57545.
	* mini-ppc.c (mono_arch_output_basic_block): Use mulli for imm16 types
	This saves a temporary register and mullw call down into 1 (minor perf
	increase for cases like sum = sum * 5;  This use to translate into:
	    li r11,5
	    mullw r28,r28,r11
	It now translates to
	    mulli r28,r28,5

2004-10-15  Zoltan Varga  <vargaz@freemail.hu>

	* trace.c (mono_trace_eval): Use mono_method_desc_full_match. Fixes
	#68388.

2004-10-11  Martin Baulig  <martin@ximian.com>

	* mini.c (mono_method_to_ir): If we're a generic method, get the
	MonoGenericContainer from our MonoMethodNormal and create a
	MonoGenericContext from it.

2004-10-08  Zoltan Varga  <vargaz@freemail.hu>

	* inssel-long32.brg (OP_LCONV_TO_OVF_I2): Fix CONV_I1 -> CONV_I2.

	* basic-long.cs: Add test for checked i8->i2 cast.

Wed Oct 6 12:40:28 CEST 2004 Paolo Molaro <lupus@ximian.com>

	* inssel-ppc.brg: added a couple of speedup rules.

2004-10-05  Zoltan Varga  <vargaz@freemail.hu>

	* Makefile.am (genmdesc_LDADD): Don't link this against libmetadata
	to speed up rebuilds.

2004-10-04  Neale Ferguson <Neale.Ferguson@SoftwareAG-usa.com>

	* mini-s390.c: Minor fix to OP_OR_IMM.

2004-10-03  Zoltan Varga  <vargaz@freemail.hu>

	* tramp-sparc.c (sparc_magic_trampoline): Handle appdomain stuff
	better. Fixes appdomain-unload.exe on sparc.

2004-10-02  Massimiliano Mantione  <massi@ximian.com>

	* ssa.c: Fixed casts to unsigned where the value was of 64 bits in
	simulate_long_compare, patch by will@exomi.com (Ville-Pertti Keinonen),
	see bug 67324.

2004-10-02  Zoltan Varga  <vargaz@freemail.hu>

	* jit-icalls.c: Handle a nonexisting trunc function more correctly.

2004-09-30  Lluis Sanchez Gual  <lluis@novell.com>

	* mini.c: Always generate a field read/write wrapper for members