@@ -493,6 +493,14 @@ mono_arch_find_jit_info (MonoDomain *domain, MonoJitTlsData *jit_tls, MonoJitInf
 		new_ctx->SC_EIP = *((guint64 *)ctx->SC_EBP + 1) - 1;
 		new_ctx->SC_EBP = *((guint64 *)ctx->SC_EBP);
 
+		/* Pop arguments off the stack */
+		{
+			MonoJitArgumentInfo *arg_info = alloca (sizeof (MonoJitArgumentInfo) * (ji->method->signature->param_count + 1));
+
+			guint32 stack_to_pop = mono_arch_get_argument_info (ji->method->signature, ji->method->signature->param_count, arg_info);
+			new_ctx->SC_ESP += stack_to_pop;
+		}
+
 		*res = *ji;
 		return res;
 	} else if (*lmf) {
